...
		let values = inputs[lastEditedIndex!]
		return values.count == (values.compactMap {$0}).count
 	}

	private var resultString: NSAttributedString {
		guard !isFresh && !isEmpty && hasCompleteData else {
			return NSAttributedString(string: "Incomplete values.")
		}

		let values = inputs[lastEditedIndex!]

		// Construct strings
		let value1Attrs: [NSAttributedString.Key: Any] = [
...
		let statusTextFontAttributes: [NSAttributedString.Key: Any] = [
			NSAttributedString.Key.font: DynamicFonts.scaledBoldFont
		]
		// Check if inputs are touched or empty
		if isFresh || isEmpty {
			return (
				statusText: NSAttributedString(string: "No Inputs Provided.", attributes: statusTextFontAttributes),
				resultText: NSAttributedString(string: "")
			)
		}

		let statusText = "Calculating result from Input \(lastEditedIndex! + 1)"
		return (
...
