...
			textField.heightAnchor.constraint(greaterThanOrEqualToConstant: 44)
		])

		// Setup ToolBar
		let toolbar: UIToolbar = UIToolbar(frame: CGRect(x: 0, y: 0, width: UIScreen.main.bounds.width, height: 44))
		toolbar.barStyle = .default
		let doneButton = UIBarButtonItem(title: "Done", style: .done, target: self, action: #selector(textFieldDoneBtnTapHandler))
		doneButton.isAccessibilityElement = true
		doneButton.accessibilityIdentifier = "Done"

		let clearButton = UIBarButtonItem(title: "Clear", style: .done, target: self, action: #selector(textFieldClearBtnTapHandler))

		let cancelButton = UIBarButtonItem(title: "Cancel", style: .done, target: self, action: #selector(textFieldCancelBtnTapHandler))
...
